final fianl for sure sure

--- a/contact.html
+++ b/contact.html
@@ -62,34 +62,34 @@
   <!-- Section 2: More Ways to Connect -->
   <section class="connect-info">
   <h2>More Ways to Connect</h2>
-  <p></p>
   <div class="icon-circles">
     <div class="icon-text">
-        <div class="circle">
-            <a id="phone" href="" aria-label="Text me (224) 383-4135">
-                <img src="./resources/css/images/telephone-handle-silhouette.png" alt="Phone Icon" />
-            </a>
-        </div>
-        <p>Text me (224) 383-4135</p>
+      <div class="circle">
+        <a id="phone" href="tel:2243834135" aria-label="Text me (224) 383-4135">
+          <img src="./resources/css/images/telephone-handle-silhouette.png" alt="Phone Icon" />
+        </a>
+      </div>
+      <p>Text me (224) 383-4135</p>
     </div>
     <div class="icon-text">
-        <div class="circle">
-            <a id="email" href="" aria-label="Email Me">
-                <img src="./resources/css/images/envelope-of-white-paper.png" alt="Email Icon" />
-            </a>
-        </div>
-        <p>Email Me: alferovnatasha@gmail.com</p>
+      <div class="circle">
+        <a id="email" href="mailto:alferovnatasha@gmail.com" aria-label="Email Me">
+          <img src="./resources/css/images/envelope-of-white-paper.png" alt="Email Icon" />
+        </a>
+      </div>
+      <p>Email Me: alferovnatasha@gmail.com</p>
     </div>
     <div class="icon-text">
-        <div class="circle">
-            <a id="location" href="" target="_blank" aria-label="Find Us on Google Maps">
-                <img src="./resources/css/images/earth-globe.png" alt="Location Icon" />
-            </a>
-        </div>
-        <p>Aubrey, TX</p>
+      <div class="circle">
+        <a id="location" href="https://www.google.com/maps?q=Aubrey,+TX" target="_blank" aria-label="Find Us on Google Maps">
+          <img src="./resources/css/images/earth-globe.png" alt="Location Icon" />
+        </a>
+      </div>
+      <p>Aubrey, TX</p>
     </div>
-</div>
+  </div>
 </section>
+
   <!-- Google Map Section -->
 <section class="map-section">
   <div class="map-container">
